Bug 9598 - some IRPC calls timeout
Summary: some IRPC calls timeout
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.0
Classification: Unclassified
Component: DCE-RPCs and pipes (show other bugs)
Version: 4.0.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
: 8851 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-25 07:30 UTC by Matthieu Patou
Modified: 2013-07-25 07:48 UTC (History)
2 users (show)

See Also:


Attachments
Proposed patch (1.79 KB, patch)
2013-01-25 07:32 UTC, Matthieu Patou
no flags Details
patches cherry-picked from master (1.98 KB, patch)
2013-01-25 11:33 UTC, Andrew Bartlett
abartlet: review+
Details
Patches for v4-0-test (13.84 KB, patch)
2013-01-27 16:22 UTC, Stefan Metzmacher
abartlet: review+
metze: review? (mat)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthieu Patou 2013-01-25 07:30:10 UTC
During make test message appears:
IRPC callback failed for DsReplicaSync - NT_STATUS_IO_TIMEOUT

The cause of the problem is that in standard model 2 process can end-up creating the same messaging socket that is used to send back the IRPC result.
The process that has sent the request will wait for the response to come before removing this socket but the other process can have already remove it preventing the response to be delivered.
Comment 1 Matthieu Patou 2013-01-25 07:32:11 UTC
Created attachment 8488 [details]
Proposed patch
Comment 2 Matthieu Patou 2013-01-25 07:33:02 UTC
Karolin, can you pickup this patch for next release (4.0.2 if not too late).

It's from andrew and I reviewed it.
Comment 3 Andrew Bartlett 2013-01-25 09:21:43 UTC
I'll replace with the identical patch with cherry-pick references once this autobuilds.
Comment 4 Andrew Bartlett 2013-01-25 11:33:11 UTC
Created attachment 8490 [details]
patches cherry-picked from master

Just the same patch, but with the cherry-pick stuff.

An additional patch for the single_task function will probably follow.
Comment 5 Stefan Metzmacher 2013-01-27 16:22:03 UTC
Created attachment 8502 [details]
Patches for v4-0-test
Comment 6 Karolin Seeger 2013-01-28 10:14:43 UTC
Pushed to autobuild-v4-0-test.
Comment 7 Karolin Seeger 2013-01-28 19:13:41 UTC
Pushed to v4-0-test.
Closing out bug report.

Thanks!
Comment 8 Stefan Metzmacher 2013-07-25 07:48:37 UTC
*** Bug 8851 has been marked as a duplicate of this bug. ***